--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,33 +1,29 @@
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-  <a class="navbar-brand" href="#">Event Managment And Resource Allocation Platform</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        //add nav link here
-
-      </li>
-      <li class="nav-item">
-        //add nav link here
-      </li>
-      <li class="nav-item">
-       //add nav link here
-      </li>
-    </ul>
- 
-    <!-- Login/Logout buttons -->
-    <ul class="navbar-nav">
-      <li  class="nav-item">
-        //add nav link here
-      </li>
-      <li class="nav-item">
-        //add nav link here
-      </li>
-    </ul>
-  </div>
+    <a class="navbar-brand" href="#">Event Managment And Resource Allocation Platform</a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item" *ngIf="roleName === 'PLANNER'">
+                <a class="nav-link" routerLink="/create-event">Create Event</a>
+            </li>
+            <li class="nav-item" *ngIf="roleName === 'PLANNER'">
+                <a class="nav-link" routerLink="/add-resource">Add Resource</a>
+            </li>
+            <li class="nav-item" *ngIf="roleName === 'PLANNER'">
+                <a class="nav-link" routerLink="/resource-allocate">Allocate Resource</a>
+            </li>
+            <li class="nav-item" *ngIf="roleName === 'STAFF'">
+                <a class="nav-link" routerLink="/view-events">View Events</a>
+            </li>
+            <li class="nav-item" *ngIf="roleName === 'CLIENT'">
+                <a class="nav-link" routerLink="/booking-details">Booking Details</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <button class="btn btn-outline-light" (click)="logout()">Logout</button>
+            </li>
+        </ul>
+    </div>
 </nav>
 
 <body  >
